GOOD ENOUGH I DONT CAREEEE

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="selection">
             <a href="1.12.2/index.html">EaglercraftX 1.12.2</a>
             <a href="1.8.9/index.html">EaglercraftX 1.8.9</a>
-            <!--<a href="1.5.2/index.html">Eaglercraft 1.5.2</a> todo: re-add when I care enough about 1.5.2 -->
+            <a href="1.5.2/index.html">Eaglercraft 1.5.2</a>
         </div>
         <div class="options">
             <input type="checkbox" id="wasmToggle" onclick="wasm()">
